# ahmbaioumy

./: .gitignore  AGENTS.md  README.md  azure-deploy.json  deploy.sh  index.html  package.json
WFM-Planning-Suite/: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt
WFM-Planning-Suite/.cursor/: environment.json
WFM-Planning-Suite/.cursor/rules/: core.md
WFM-Planning-Suite/docs/: WEB_ACCESS.md  architecture.md  user_guide.md  validation_framework.md
WFM-Planning-Suite/gemini-studio/: README.md  metadata.json
WFM-Planning-Suite/gemini-studio/src/: App.tsx  types.ts
WFM-Planning-Suite/gemini-studio/src/components/: CapacityPlanning.tsx  CostAnalysis.tsx  CustomRangeSlider.tsx  Dashboard.tsx  Forecasting.tsx  Scheduling.tsx  Simulation.tsx  SizingErlang.tsx  UploadCleansing.tsx
WFM-Planning-Suite/gemini-studio/src/utils/: aggregationUtils.ts  cleansingUtils.ts  excelExportUtils.ts  forecastingUtils.ts  mathUtils.ts
WFM-Planning-Suite/installer/: setup.iss
WFM-Planning-Suite/scripts/: check_core_isolation.py  check_offline.py
WFM-Planning-Suite/src/: main.py
WFM-Planning-Suite/src/core/: models.py
WFM-Planning-Suite/src/core/cleansing/: __init__.py  strategies.py
WFM-Planning-Suite/src/ui/: main_window.py  widgets.py
WFM-Planning-Suite/src/wfm_io/: __init__.py  files.py  state.py
WFM-Planning-Suite/tests/: conftest.py
WFM-Planning-Suite/tests/tier2/: test_pipeline.py  test_upload.py
WFM-Planning-Suite/web/: index.html  package-lock.json  package.json  vite.config.ts
WFM-Planning-Suite/web/src/: App.css  App.tsx
(+182 files in other folders)
